Expose primary dose source in API
